welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.error
MethodsPictureLarge:9: error: ';' expected but 'for' found.
override def run() {for (compteur <-1 to 3) {} for (compteur <- 1 to 9) {motif()};up();for (compteur <- 1 to 9) {motif()};up();for (compteur <- 1 to 9) {motif()};up()}
                                               ^MethodsPictureLarge:13: error: Unmatched closing brace '}' ignored here
}
^